# matrix_library

./: CMakeLists.txt  README.md  RuntimeOutput.txt  adjugate_of_A.txt  checkerboard_matrix.txt  identity_matrix.txt  inverse_of_matrix_A.txt  main.cpp  matlib.h  matrix_A.txt  matrix_of_cofactors_of_A.txt  matrix_of_minors_of_A.txt  test_main.cpp  vector_b.txt  vector_x.txt
